--- a/scss/components/tag.scss
+++ b/scss/components/tag.scss
@@ -37,6 +37,13 @@
         padding: unset;
         border-radius: unset;
 
+        i {
+            font-size: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
         img {
             max-width: 100%;
             height: auto;
