--- a/scss/components/card-simple.scss
+++ b/scss/components/card-simple.scss
@@ -29,6 +29,15 @@
 
     &__icon {
         margin-bottom: 28px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        i {
+            font-size: 19px;
+        }
 
         img {
             max-width: 100%;
