--- a/scss/components/suitable.scss
+++ b/scss/components/suitable.scss
@@ -68,7 +68,22 @@
             height: 24px;
             fill: var(--color-neutral-black-100);
         }
+
+        i {
+            width: 24px;
+            height: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+        }
     }
+
+    &__button {
+        &_mob {
+            display: none;
+        }
+    } 
 }
 
 @media screen and (min-width: $lg) {
@@ -132,5 +147,26 @@
         &__item {
             max-width: 100%;
         }
+
+        &__button {
+            &_desk {
+                display: none;
+            }
+
+            &_mob {
+                margin-top: 40px;
+                display: flex;
+            }
+        } 
+    }
+}
+
+@media screen and (max-width: $sm) {
+    .suitable {
+        &__button {
+            &_mob {
+                width: 100%;
+            }
+        } 
     }
 }
