--- a/scss/components/work.scss
+++ b/scss/components/work.scss
@@ -1,8 +1,7 @@
 .work {
     &__wrapper {
         display: flex;
-        align-items: flex-start;
-        gap: 16px;
+        gap: 24px;
         position: relative;
         counter-reset: i;
         
@@ -21,7 +20,6 @@
 
     &__inner {
         position: relative;
-        margin-bottom: 24px;
         display: flex;
         flex-direction: column;
         gap: 16px;
@@ -46,6 +44,10 @@
         width: 100%;
         position: relative;
         z-index: 2;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        justify-content: space-between;
 
         &:last-child {
             background: var(--color-primary-50);
@@ -53,8 +55,14 @@
     }
 
     &__text {
-        margin-top: 16px;
         max-width: 320px;
+    }
+
+    &__outer {
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        justify-content: space-between;
     }
 
     &__img {
@@ -79,19 +87,22 @@
             }
         } 
 
+        &__item {
+            gap: 12px;
+        }
+
         &__inner {
             flex-direction: row;
             gap: 16px;
-            align-items: center;
+            align-items: flex-start;
         }
 
-        &__img {
+        &__title {
             margin-left: 56px;
         }
 
         &__text {
             margin-left: 56px;
-            margin-top: 12px;
         }
     }
 }
