--- a/scss/components/hero.scss
+++ b/scss/components/hero.scss
@@ -28,11 +28,15 @@
         display: flex;
         align-items: center;
         flex-wrap: wrap;
-        gap: 12px;
+        gap: 4px;
         padding-left: 5px;
 
         .tag {
             height: 30px;
+            -webkit-backdrop-filter: blur(40px);
+            backdrop-filter: blur(40px);
+            padding-left: 12px;
+            padding-right: 12px;
         }
     }
 
@@ -97,12 +101,7 @@
         background: url('./images/hero_mob.png') no-repeat bottom right / cover;
 
         &__buttons {
-            flex-direction: column;
-            width: 100%;
-
-            .button {
-                width: 100%;
-            }
+            flex-wrap: wrap;
         }
 
         &__img {
