--- a/scss/components/problems.scss
+++ b/scss/components/problems.scss
@@ -118,12 +118,12 @@
             }
 
             &::before {
-                background: url('./images/icons/angle-left.svg') no-repeat 10% 50% / auto 45%, linear-gradient(90deg, rgba(0,0,0,1) 15%, rgba(0,0,0,0) 100%);
+                background: url('./images/icons/angle-left.svg') no-repeat 10% 50% / auto 45%, linear-gradient(90deg, rgba(3, 7, 18, 1) 15%, rgba(3, 7, 18, 0) 100%);
                 left: -24px;
             }
 
             &::after {
-                background: url('./images/icons/angle-right.svg') no-repeat 90% 50% / auto 45%, linear-gradient(-90deg, rgba(0,0,0,1) 15%, rgba(0,0,0,0) 100%);
+                background: url('./images/icons/angle-right.svg') no-repeat 90% 50% / auto 45%, linear-gradient(-90deg, rgba(3, 7, 18, 1) 15%, rgba(3, 7, 18, 0) 100%);
                 right: -24px;
             }
 
@@ -190,7 +190,7 @@
             }
 
             &:last-child {
-                margin-right: 16px;
+                margin-right: 24px;
             }
         }
     }
