crm form bug fix

--- a/scss/components/b24-form.scss
+++ b/scss/components/b24-form.scss
@@ -214,6 +214,10 @@
     padding-bottom: 0 !important;
 }
 
+.b24-window-panel-pos-right {
+    max-width: 90vw !important;
+}
+
 .b24-form-btn-container {
     .b24-form-btn {
         width: 100% !important;
