--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -14,6 +14,11 @@
 @import 'tabs.scss';
 @import 'b24-form.scss';
 @import 'fullscreen-img.scss';
+@import 'slider.scss';
+@import 'swiper.scss';
+@import 'benefits-list.scss';
+@import 'viewport.scss';
+@import 'card-case.scss';
 
 @import 'header.scss';
 @import 'hero.scss';
@@ -23,4 +28,13 @@
 @import 'work.scss';
 @import 'problems.scss';
 @import 'feedback.scss';
+@import 'integration.scss';
+@import 'solutions.scss';
+@import 'possibilities.scss';
+@import 'partners.scss';
+@import 'cases.scss';
+@import 'help.scss';
+@import 'clients.scss';
+@import 'certificate.scss';
+@import 'bonus.scss';
 @import 'footer.scss';
