--- a/scss/components/problems.scss
+++ b/scss/components/problems.scss
@@ -1,20 +1,55 @@
 .problems {
     background: var(--color-gray-950);
 
+    .swiper-pagination,
+    .swiper-scrollbar {
+        display: none;
+    }
+
+    &_hero {
+        background: var(--hero-background-color);
+       
+        .title-section {
+            width: 100%;
+            text-align: center;
+        }
+
+        .problems__content {
+            max-width: unset;
+        }
+    }
+
     &__wrapper {
+        @extend .tabs__block;
+
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
         gap: 40px;
     }
 
+    &__name {
+        @extend .title-sm;
+
+        color: var(--color-neutral-white-100);
+        display: none;
+    }
+
     &__buttons {
+        @extend .tabs__buttons;
+
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
         gap: 24px;
         max-width: 432px;
+        flex-shrink: 0;
+    }
+
+    &__contents {
+        max-width: calc(50% + 35px);
+        width: 100%;
     }
 
     &__button {
@@ -32,28 +67,20 @@
         }
     }
 
-    &__contents {
-        max-width: calc(50% + 35px);
-        width: 100%;
-    }
-
     &__content {
-        padding-left: 40px;
         width: 100%;
         max-width: 696px;
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
         gap: 48px;
-        display: none;
-
-        &.is-active {
-            display: flex;
-        }
+        display: flex;
     }
 
     &__block {
-        &:first-of-type {
+        padding-left: 40px;
+
+        &:nth-of-type(2) {
             .problems__text {
                 &::before {
                     background: url('./images/icons/warning.svg') no-repeat center;
@@ -97,6 +124,33 @@
             left: -40px;
         }
     }
+
+    &__list {
+        display: flex;
+        align-items: flex-start;
+        gap: 56px 16px;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    &__list-item {
+        @extend .text-standard;
+
+        max-width: calc(50% - 16px);
+        color: var(--color-neutral-white-80);
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        width: 100%;
+        flex-shrink: 0; 
+    }
+
+    &__list-text {
+        @extend .title-block;
+
+        display: inline-block;
+        color: var(--color-neutral-white-100);
+    }
 }
 
 @media screen and (max-width: $md) {
@@ -104,55 +158,15 @@
         &__wrapper {
             flex-direction: column;
             position: relative;
-
-            &::after,
-            &::before {
-                content: '';
-                display: block;
-                width: 36px;
-                height: 40px;
-                position: absolute;
-                top: -8px;
-                transition: .3s linear;
-                width: 70px;
-                pointer-events: none;
-            }
-
-            &::before {
-                background: url('./images/icons/angle-left.svg') no-repeat 10% 50% / auto 45%, linear-gradient(90deg, rgba(3, 7, 18, 1) 15%, rgba(3, 7, 18, 0) 100%);
-                left: -24px;
-            }
-
-            &::after {
-                background: url('./images/icons/angle-right.svg') no-repeat 90% 50% / auto 45%, linear-gradient(-90deg, rgba(3, 7, 18, 1) 15%, rgba(3, 7, 18, 0) 100%);
-                right: -24px;
-            }
-
-            &.is-start {
-                &::before {
-                    opacity: 0;
-                }
-            }
-
-            &.is-end {
-                &::after {
-                    opacity: 0;
-                }
-            }
         } 
 
         &__contents {
             max-width: 100%;
         }
 
-        &__buttons {
-            flex-direction: row;
-            max-width: calc(100% + 48px);
-            overflow-x: scroll;
-            overflow-y: hidden;
-            padding-bottom: 16px;
-            margin-left: -24px;
-        } 
+        &__content {
+            max-width: 100%;
+        }
 
         &__button {
             white-space: nowrap;
@@ -170,29 +184,29 @@
 
 @media screen and (max-width: $sm) {
     .problems {
-        &__wrapper {
-            &::before {
-                left: -16px;
-            }
+        .swiper-pagination {
+            display: flex;
+            position: static !important;
+            margin-top: 32px;
+        }
 
-            &::after {
-                right: -16px;
-            }
-        } 
+        &__name {
+            display: block;
+        }
 
-        &__buttons {
-            max-width: calc(100% + 32px);
-            margin-left: -16px;
-        } 
+        &__content {
+            gap: 32px;
+            padding: 16px;
+            border-radius: 16px;
+            background: var(--color-gray-900);
+        }
 
-        &__button {
-            &:first-child {
-                margin-left: 16px;
-            }
+        &__list {
+            gap: 24px;
+        }
 
-            &:last-child {
-                margin-right: 24px;
-            }
+        &__list-item {
+            max-width: 100%;
         }
     }
 }
