--- a/scss/components/tabs.scss
+++ b/scss/components/tabs.scss
@@ -41,3 +41,83 @@
         }
     }
 }
+
+@media screen and (max-width: $md) {
+    .tabs {
+        &__block {
+            position: relative;
+
+            &::after,
+            &::before {
+                content: '';
+                display: block;
+                width: 36px;
+                height: 40px;
+                position: absolute;
+                top: -8px;
+                transition: .3s linear;
+                width: 70px;
+                pointer-events: none;
+            }
+
+            &::before {
+                background: url('./images/icons/angle-left.svg') no-repeat 10% 50% / auto 45%, linear-gradient(90deg, rgba(3, 7, 18, 1) 15%, rgba(3, 7, 18, 0) 100%);
+                left: -24px;
+            }
+
+            &::after {
+                background: url('./images/icons/angle-right.svg') no-repeat 90% 50% / auto 45%, linear-gradient(-90deg, rgba(3, 7, 18, 1) 15%, rgba(3, 7, 18, 0) 100%);
+                right: -24px;
+            }
+
+            &_blue {
+                &::before {
+                    background: url('./images/icons/angle-left.svg') no-repeat 10% 50% / auto 45%, linear-gradient(90deg, rgba(37, 99, 235, 1) 15%, rgba(37, 99, 235, 0) 100%);
+                    left: -24px;
+                }
+    
+                &::after {
+                    background: url('./images/icons/angle-right.svg') no-repeat 90% 50% / auto 45%, linear-gradient(-90deg, rgba(37, 99, 235, 1) 15%, rgba(37, 99, 235, 0) 100%);
+                    right: -24px;
+                }
+            }
+
+            &.is-start {
+                &::before {
+                    opacity: 0;
+                }
+            }
+
+            &.is-end {
+                &::after {
+                    opacity: 0;
+                }
+            }
+        }
+
+        &__buttons {
+            flex-direction: row !important;
+            max-width: calc(100% + 48px) !important;
+            flex-wrap: nowrap !important;
+            overflow-x: scroll;
+            overflow-y: hidden;
+            padding-bottom: 16px;
+            margin-left: -24px;
+        } 
+    }
+}
+
+@media screen and (max-width: $sm) {
+    .tabs {
+        &__block {
+            &::after,
+            &::before {
+                display: none !important;
+            }
+        }
+        
+        &__buttons {
+            display: none !important;
+        }
+    }
+}
