--- a/scss/components/tag.scss
+++ b/scss/components/tag.scss
@@ -11,6 +11,17 @@
     justify-content: flex-start;
     gap: 7px;
 
+    &_white {
+        background: var(--color-neutral-white-100);
+        box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.04);
+        color: var(--color-neutral-black-100);
+    }
+
+    &_primary{
+        background: var(--color-primary-50);
+        color: var(--color-primary-500);
+    }
+
     &_dark {
         background: var(--color-neutral-black-8);
         color: var(--color-neutral-black-56);
